--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
 <!DOCTYPE html>
-    <body>
-        <h1>HEJHEJ</h1>
-    </body>
+<html>
+        <head>
+            <title>Laptop uf</title>
+            <link rel="stylesheet" href="mall.css"/>
+        </head>
+        <body>
+            <div class="container">
+                <h1 class="logo">Laptopuf.se</h1>
+                <nav>
+                    <!--menyn-->
+                    <a href="index.html">Start</a>
+                    <a href="butik.html">Butik</a>
+                    <a href="kontakt.html">Kontakt</a>
+                </nav>
+                <h1>Välkommen</h1>
+                <p>välkommen till laptopuf.se</p>
+                <p>Världens bästa uf-företag</p>
+            </div>
+        </body>
+</html>
